test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/stdout.snap
---
source: test/tests/tests.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods
   Compiling library core (sway-lib-core)
   Compiling library std (sway-lib-std)
warning
   --> sway-lib-std/src/ecr.sw:221:26
    |
219 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
220 | pub fn ec_recover_address(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
221 |     let pub_key_result = ec_recover(signature, msg_hash);
    |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
222 | 
223 |     if let Err(e) = pub_key_result {
    |
____

warning
   --> sway-lib-std/src/ecr.sw:267:26
    |
265 | #[deprecated(note = "std::ecr has been replaced by std::crypto, and is no longer maintained")]
266 | pub fn ec_recover_address_r1(signature: B512, msg_hash: b256) -> Result<Address, EcRecoverError> {
267 |     let pub_key_result = ec_recover_r1(signature, msg_hash);
    |                          ------------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
268 | 
269 |     if let Err(e) = pub_key_result {
    |
____

warning
  --> sway-lib-std/src/vm/evm/ecr.sw:43:26
   |
41 |     msg_hash: b256,
42 | ) -> Result<EvmAddress, EcRecoverError> {
43 |     let pub_key_result = ec_recover(signature, msg_hash);
   |                          ---------- deprecated function: std::ecr has been replaced by std::crypto, and is no longer maintained
44 | 
45 |     match pub_key_result {
   |
____

  Compiled library "std" with 3 warnings.
   Compiling contract contract_implements_multiple_abis_with_same_methods (test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods)
error: Multiple contracts methods with the same name.
  --> test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/src/main.sw:14:8
   |
...
14 |     fn foo() -> u64 {
   |        ^^^ This is the first method
...
22 |     fn foo() -> u64 {
   |        ^^^ This is the duplicated method.
   |
   = help: Contract methods names must be unique, even when implementing multiple ABIs.
____

error: Multiple contracts methods with the same name.
  --> test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/src/main.sw:18:8
   |
...
18 |     fn foo2() {}
   |        ^^^^ This is the first method
...
26 |     fn foo2() {}
   |        ^^^^ This is the duplicated method.
   |
   = help: Contract methods names must be unique, even when implementing multiple ABIs.
____

error: Could not generate the entry method. See errors above for more details.
____

  Aborting due to 3 errors.
error: Failed to compile contract_implements_multiple_abis_with_same_methods
